--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cars",
   "version": "0.1.0",
+  "homepage": "https://coolcrazyfox.github.io/shop-app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -11,13 +12,16 @@
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "swiper": "^8.3.1",
+    "gh-pages": "^4.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
